b2c/sfsc/src/objects/SFCCConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This Custom Setting holds configuration settings to Integrate with Salesforce Commerce Cloud.</description>
    <fields>
        <fullName>Customer_List_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Customer List id</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Customer List id</inlineHelpText>
        <label>Customer List Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Master_Catalog_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud master catalog id for assigned to a commerce cloud site.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud master catalog id for assigned to a commerce cloud site.</inlineHelpText>
        <label>Master Catalog Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PriceBook_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Price book id assigned to a Salesforce Commerce Cloud Site.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Price book id assigned to a Salesforce Commerce Cloud Site.</inlineHelpText>
        <label>PriceBook Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Image_Group_Detailview__c</fullName>
        <description>This config holds product details image view type</description>
        <inlineHelpText>This config holds product details image view type</inlineHelpText>
        <label>Product Image Group Detailview</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Image_Group_Listview__c</fullName>
        <description>This config holds product list page image view type</description>
        <inlineHelpText>This config holds product list page image view type</inlineHelpText>
        <label>Product Image Group Listview</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SFCC_Site_URL__c</fullName>
        <description>This field holds Salesforce Commerce Cloud end point domain to connect to Salesforce Commerce Cloud.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud end point domain to connect to Salesforce Commerce Cloud.</inlineHelpText>
        <label>SFCC Site URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Catalog_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Sales Catalog id assigned to a Salesforce Commerce Cloud site.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Sales Catalog id assigned to a Salesforce Commerce Cloud site.</inlineHelpText>
        <label>Sales Catalog Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Site_Id__c</fullName>
        <description>This field holds Salesforce Commerce Cloud Site Id.</description>
        <inlineHelpText>This field holds Salesforce Commerce Cloud Site Id.</inlineHelpText>
        <label>Site Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>Specified time that connect to commerce cloud and pull datas after rest service triggered(minutes)</description>
        <inlineHelpText>Specified time that connect to commerce cloud and pull datas after rest service triggered(minutes)</inlineHelpText>
        <label>Time</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SFCC Configuration</label>
</CustomObject>